--- a/StockManager/Views/PurchaseOrders/Details.cshtml
+++ b/StockManager/Views/PurchaseOrders/Details.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div>
-    <h4>Purchase Order Invoice# @Model.InvoiceNumber</h4>
+    <h4>Purchase Invoice# @Model.InvoiceNumber</h4>
     <hr />
     <dl class="dl-horizontal">  
         <dt>
@@ -33,7 +33,7 @@
     </dl>
 </div>
 <p>
-    Purchase Order Details
+    Purchase Details
 </p>
 <table class="table">
     <tr>
