--- a/StockManager/Views/PurchaseOrders/Index.cshtml
+++ b/StockManager/Views/PurchaseOrders/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Purchase Orders</h2>
+<h2>Purchases</h2>
 @Html.ActionLink("Create new purchase order", "Create", "", new { @class = "btn btn-success" })
 @*<a id="btnCreate" class="btn btn-success btn-sm pull-left" data-toggle="modal" href="#createModel">Create new purchase order</a>*@
 <br />
@@ -32,7 +32,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.InvoiceNumber)
+                @Html.ActionLink(item.InvoiceNumber.ToString(), "Details", new { id = item.Id })                
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Vendor.VendorName)
@@ -45,9 +45,7 @@
             </td>
             <td>
 
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-xs" })
-                |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-info btn-xs" })
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-xs" })                
                 |
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { onclick = "return confirm('Are you sure you wish to delete this Purchase Order?');", @class = "btn btn-danger btn-xs" })
             </td>
