--- a/StockManager/Views/PurchaseOrders/Index.cshtml
+++ b/StockManager/Views/PurchaseOrders/Index.cshtml
@@ -32,7 +32,7 @@
     {
         <tr>
             <td>
-                @Html.ActionLink(item.InvoiceNumber.ToString(), "Details", new { id = item.Id })                
+                @Html.ActionLink(Convert.ToString(item.InvoiceNumber), "Details", new { id = item.Id })               
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Vendor.VendorName)
