--- a/StockManager/Views/PrinterChalans/Create.cshtml
+++ b/StockManager/Views/PrinterChalans/Create.cshtml
@@ -7,7 +7,7 @@
 @using (Html.BeginForm())
 {
     <div class="form-horizontal">
-        <h4>Purchase</h4>
+        <h4>Printer Chalan</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="container">
@@ -22,12 +22,21 @@
                     </div>
                 </div>
                 <div id="div2" class="col-md-6 col-xs-12">
-                    <div class="form-group">
+                    @*<div class="form-group">
                         @Html.LabelFor(model => model.ChalanDate, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.ChalanDate, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.ChalanDate, "", new { @class = "text-danger" })
                         </div>
+                    </div>*@
+                    <div class="col-md-8">
+                        <div class="controls input-append date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input1">
+                            @Html.EditorFor(model => model.ChalanDate, new { htmlAttributes = new { @class = "form-control", @id = "ChalanDate" } })
+                            <span class="add-on"><i class="icon-remove"></i></span>
+                            <span class="add-on"><i class="icon-th"></i></span>
+                        </div>
+                        <input type="hidden" id="dtp_input1" value="" /><br />
+                        @Html.ValidationMessageFor(model => model.ChalanDate, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
@@ -35,7 +44,7 @@
                 <div id="div2" class="col-md-6 col-xs-12">
                     <div class="form-group">
                         @Html.LabelFor(model => model.IsGivenToPrinting, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
+                        <div class="col-md-offset-2 col-md-4">
                             <div class="checkbox">
                                 @Html.EditorFor(model => model.IsGivenToPrinting)
                                 @Html.ValidationMessageFor(model => model.IsGivenToPrinting, "", new { @class = "text-danger" })
