--- a/StockManager/Views/Shared/_Layout.cshtml
+++ b/StockManager/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                             <span>Job Work</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="#">Printer Work</a></li>
+                            <li><a href="~/PrinterChalans/Index">Printer Work</a></li>
                             <li><a href="#">Tailor Work</a></li>
                         </ul>
                     </li>       
