--- a/StockManager/Views/Products/Details.cshtml
+++ b/StockManager/Views/Products/Details.cshtml
@@ -4,12 +4,12 @@
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-s<div>
+<div>
     <h4>Product Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ProductName)
+            Product Name
         </dt>
 
         <dd>
@@ -31,7 +31,12 @@ s<div>
         <dd>
             @Html.DisplayFor(model => model.ProductType.ProductType1)
         </dd>
-
+        <dt>
+            Active
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.IsActive)
+        </dd>
     </dl>
 </div>
 <p>
