--- a/StockManager/Views/PrinterChalans/Create.cshtml
+++ b/StockManager/Views/PrinterChalans/Create.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Create New Printer Chalan";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 @using (Html.BeginForm())
 {
     <div class="form-horizontal">
@@ -14,47 +15,31 @@
             <div class="row">
                 <div id="div1" class="col-md-6 col-xs-12">
                     <div class="form-group">
-                        @Html.LabelFor(model => model.VendorId, "VendorId", htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.DropDownList("VendorId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.Label("Vendor", "VendorId", htmlAttributes: new { @class = "control-label col-md-3" })
+                        <div class="col-md-7">
+                            @Html.DropDownList("VendorId", null, htmlAttributes: new { @class = "form-control col-md-7", @id = "Vendor" })
                             @Html.ValidationMessageFor(model => model.VendorId, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
                 <div id="div2" class="col-md-6 col-xs-12">
-                    @*<div class="form-group">
-                        @Html.LabelFor(model => model.ChalanDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.ChalanDate, new { htmlAttributes = new { @class = "form-control" } })
+                    <div class="form-group">
+                        @Html.Label("Chalan Date", htmlAttributes: new { @class = "control-label col-md-3" })
+                        <div class="col-md-7">
+                            <div class="controls input-append date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input1">
+                                @Html.EditorFor(model => model.ChalanDate, new { htmlAttributes = new { @class = "form-control", @id = "ChalanDate" } })
+                                <span class="add-on"><i class="icon-remove"></i></span>
+                                <span class="add-on"><i class="icon-th"></i></span>
+                            </div>
+                            <input type="hidden" id="dtp_input1" value="" /><br />
                             @Html.ValidationMessageFor(model => model.ChalanDate, "", new { @class = "text-danger" })
                         </div>
-                    </div>*@
-                    <div class="col-md-8">
-                        <div class="controls input-append date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input1">
-                            @Html.EditorFor(model => model.ChalanDate, new { htmlAttributes = new { @class = "form-control", @id = "ChalanDate" } })
-                            <span class="add-on"><i class="icon-remove"></i></span>
-                            <span class="add-on"><i class="icon-th"></i></span>
-                        </div>
-                        <input type="hidden" id="dtp_input1" value="" /><br />
-                        @Html.ValidationMessageFor(model => model.ChalanDate, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
+
             <div class="row">
-                <div id="div2" class="col-md-6 col-xs-12">
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.IsGivenToPrinting, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-offset-2 col-md-4">
-                            <div class="checkbox">
-                                @Html.EditorFor(model => model.IsGivenToPrinting)
-                                @Html.ValidationMessageFor(model => model.IsGivenToPrinting, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div id="div1" class="col-md-6 col-xs-12">
+                <div id="div1" class="col-md-6 col-xs-12 mt">
                     <div class="form-group">
                         <div class="col-md-2">
                         </div>
@@ -68,7 +53,7 @@
             <div class="row">
                 <div id="div1" class="col-md-12 col-xs-12">
                     <div class="form-group">
-                        <table class="table table-striped table-advance table-hover" id="purchaseOrderItems">
+                        <table class="table table-striped table-advance table-hover" id="printerChalanItems">
                             <tr id="productItemRow">
                                 <td>
                                     <label class="productName">Product Name</label>
@@ -80,8 +65,14 @@
                                 <td>
                                     <label class="productFold">Fold</label>
                                 </td>
-                                <td class="productRate">
-                                    <label class="productRate">Rate</label>
+                                <td>
+                                    <label class="expectedFold">Expected Fold</label>
+                                </td>
+                                <td>
+                                    <label class="netQuantity">Net Quantity</label>
+                                </td>
+                                <td>
+                                    <label class="shrinkage">Shrinkage</label>
                                 </td>
                                 <td class="itemEditRow"></td>
                             </tr>
@@ -128,7 +119,7 @@
                                         @Html.Editor("Quantity", new { htmlAttributes = new { @class = "form-control", @id = "quantity" } })
                                         @Html.ValidationMessage("Quantity", "", new { @class = "text-danger" })
                                     </div>
-                                </div>                                
+                                </div>
                                 <div class="form-group">
                                     @Html.Label("Fold", htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
@@ -153,7 +144,7 @@
                                 <div class="form-group">
                                     @Html.Label("Shrinkage", htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.Editor("Shrinkage", new { htmlAttributes = new { @class = "form-control", @id = "Shrinkage" } })
+                                        @Html.Editor("Shrinkage", new { htmlAttributes = new { @class = "form-control", @id = "shrinkage" } })
                                         @Html.ValidationMessage("Shrinkage", "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -203,19 +194,23 @@
                     $('.productName', $newRow).text($('#product').text());
                     $('.productQuantity', $newRow).text($('#quantity').val());
                     $('.productFold', $newRow).text($('#fold').val());
-                    $('.productRate', $newRow).text($('#rate').val());
+                    $('.expectedFold', $newRow).text($('#expectedFold').val());
+                    $('.netQuantity', $newRow).text($('#netQuantity').val());
+                    $('.shrinkage', $newRow).text($('#shrinkage').val());
                     //$('.itemEditRow', $newRow).append('<a class="btn btn-success btn-xs" href="" title="Edit"><i class="fa fa-pencil"></i></a>|<a class="btn btn-danger btn-xs" href="" title="Delet>"><i class="fa fa-trash-o"></i></a>');
                     $('.itemEditRow', $newRow).append('<button type="button" class="btn btn-danger btn-xs remove" title="Delete" ><i class="fa fa-trash-o"></i></button>');
-                    $('#purchaseOrderItems').append($newRow);
+                    $('#printerChalanItems').append($newRow);
                     $('#quantity').val('');
                     $('#fold').val('');
-                    $('#rate').val('');
+                    $('#expectedFold').val('');
+                    $('#netQuantity').val('');
+                    $('#shrinkage').val('');
                     $("#itemModel").modal('hide');
                 }
             });
 
             //remove button click event
-            $('#purchaseOrderItems').on('click', '.remove', function () {
+            $('#printerChalanItems').on('click', '.remove', function () {
                 $(this).parents('tr').remove();
             });
 
@@ -225,15 +220,16 @@
                 //validate order items
                 var list = [];
                 var errorItemCount = 0;
-                $('#purchaseOrderItems tbody tr').each(function (index, ele) {
+                $('#printerChalanItems tbody tr').each(function (index, ele) {
 
-                    if($('.productId', this).val() != null && $('.productId', this).val() != "0" && $('.productId', this).val() != "")
-                    {
+                    if ($('.productId', this).val() != null && $('.productId', this).val() != "0" && $('.productId', this).val() != "") {
                         var orderItem = {
                             ProductId: $('.productId', this).val(),
                             Quantity: $('.productQuantity', this).text(),
                             Fold: $('.productFold', this).text(),
-                            Rate: $('.productRate', this).text()
+                            ExpectedFold: $('.expectedFold', this).text(),
+                            NetQuantity: $('.netQuantity', this).text(),
+                            Shrinkage: $('.shrinkage', this).text()
                         }
                         list.push(orderItem);
                     }
@@ -242,37 +238,34 @@
 
                 var data = {
                     VendorId: $('#Vendor').val(),
-                    InvoiceNumber: $('#InvoiceNo').val(),
-                    InvoiceDate: $('#InvoiceDate').val(),
-                    PurchaseDetails: list
+                    ChalanDate: $('#ChalanDate').val(),
+                    IsGivenToPrinting: @Html.Raw(ViewBag.GivenToPrinter),
+                    PrinterChalanDetails: list
                 }
 
-                $(this).val('Please wait...');
+                //$(this).val('Please wait...');
 
                 $.ajax({
                     type: 'POST',
-                    url: '/PurchaseOrders/Create',
+                    url: '/PrinterChalans/Create',
                     data: JSON.stringify(data),
                     contentType: 'application/json',
                     success: function (data) {
                         if (data != "0") {
-                            alert('Purchase Order Saved Successfully.');
+                            alert('Printer Chalan Saved Successfully.');
                             list = [];
-                            $('#Vender,#InvoiceNo,#InvoiceDate').val('');
-                            $('#purchaseOrderItems').empty();
-                            $('#purchaseOrderItems tbody tr').each(function (index, ele) {
-
-                                if($('.productId', this).val() != null && $('.productId', this).val() != "0" && $('.productId', this).val() != "")
-                                {
-                                    $('#purchaseOrderItems tbody tr', this).remove();
+                            $('#Vender,#InvoiceDate').val('');
+                            $('#printerChalanItems tbody tr').each(function (index, ele) {
+                                if ($('.productId', this).val() != null && $('.productId', this).val() != "0" && $('.productId', this).val() != "") {
+                                    $('#printerChalanItems tbody tr', this).remove();
                                 }
                             });
-                            $(this).val('Save Purchase Order');
-                            window.location.href = '/PurchaseOrders/Details/' + data;
+                            //$(this).val('Save Purchase Order');
+                            window.location.href = '/PrinterChalans/Details/' + data;
                         }
                         else {
-                            alert('Error in saving purchase order');
-                            $(this).val('Save Purchase Order');
+                            //$(this).val('Save Printer Chalan');
+                            alert('Error in saving printer chalan');
                         }
                     },
                     error: function (error) {
