--- a/StockManager/Views/PrinterChalans/Details.cshtml
+++ b/StockManager/Views/PrinterChalans/Details.cshtml
@@ -5,63 +5,78 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
-
 <div>
-    <h4>PrinterChalan</h4>
+    <h4>Printer Chalan# @Model.Id</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ChalanDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ChalanDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Created)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Created)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Updated)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Updated)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsGivenToPrinting)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsGivenToPrinting)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Vendor.VendorName)
+            Vendor Name
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Vendor.VendorName)
         </dd>
-
+        <dt>
+            Chalan Date
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ChalanDate)
+        </dd>
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    Printer Chalan Details
+</p>
+<table class="table">
+    <tr>
+        <th>
+            Product Name
+        </th>
+        <th>
+            Quantity
+        </th>
+        <th>
+            Fold
+        </th>
+        <th>
+            Expected Fold
+        </th>
+        <th>
+            NetQuantity
+        </th>
+        <th>
+            Shrinkage
+        </th>
+    </tr>
+    @{
+        if (Model != null && Model.PrinterChalanDetails != null)
+        {
+            foreach (var item in Model.PrinterChalanDetails)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Product.ProductName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Quantity)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Fold)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ExpectedFold)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NetQuantity)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Shrinkage)
+                    </td>
+                </tr>
+            }
+        }
+    }
+</table>
+<p>
+    @Html.ActionLink("Close", "Index", "PrinterChalans", new { @class = "btn btn-danger" })
 </p>
