--- a/StockManager/Views/PrinterChalans/Index.cshtml
+++ b/StockManager/Views/PrinterChalans/Index.cshtml
@@ -6,8 +6,15 @@
 }
 
 <h2>Printer Chalan</h2>
-@Html.ActionLink("Create new printer chalan", "Create", "", new { @class = "btn btn-success" })
-
+<table class="table-responsive">
+    <tr>
+        <td class="col-md-6 col-xs-12">
+            @Html.ActionLink("Create new printer chalan(Product send to printer)", "Create", new { id = 1 }, new { @class = "btn btn-success" })
+        </td>
+        <td class="col-md-6 col-xs-12">
+            @Html.ActionLink("Create new printer chalan(Product received from printer)", "Create", new { id = 0 }, new { @class = "btn btn-success " })
+        </td>
+</table>
 <table class="table table-striped table-advance table-hover mt">
     <tr>
         <th>
@@ -20,7 +27,7 @@
             Chalan Date
         </th>
         <th>
-            Given To Printing
+            Procuct Given To Printing
         </th>
 
         <th></th>
