changes for report and the chalan page management from menu

--- a/StockManager/Views/Shared/_Layout.cshtml
+++ b/StockManager/Views/Shared/_Layout.cshtml
@@ -49,7 +49,8 @@
                             <span>Job Work</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="~/PrinterChalans/Index">Printer Work</a></li>                            
+                            <li><a href="~/PrinterChalans/Index/1">Printer Work (Send)</a></li>     
+                            <li><a href="~/PrinterChalans/Index/0">Printer Work (Receive)</a></li>                        
                             <li><a href="#">Tailor Work</a></li>
                         </ul>
                     </li>       
@@ -71,8 +72,8 @@
                             <span>Reports</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="#">Vendor Wise Stock</a></li>
-                            <li><a href="#">Product Wise Stock</a></li>
+                            <li><a href="~/Report/VendorWiseStock">Vendor Wise Stock</a></li>
+                            <li><a href="~/Report/ProductWiseStock">Product Wise Stock</a></li>
                         </ul>
                     </li>                   
                 <!-- sidebar menu end-->
