--- a/StockManager/Views/PrinterChalans/Index.cshtml
+++ b/StockManager/Views/PrinterChalans/Index.cshtml
@@ -6,15 +6,26 @@
 }
 
 <h2>Printer Chalan</h2>
-<table class="table-responsive">
-    <tr>
-        <td class="col-md-6 col-xs-12">
-            @Html.ActionLink("Create new printer chalan(Product send to printer)", "Create", new { id = 1 }, new { @class = "btn btn-success" })
-        </td>
-        <td class="col-md-6 col-xs-12">
-            @Html.ActionLink("Create new printer chalan(Product received from printer)", "Create", new { id = 0 }, new { @class = "btn btn-success " })
-        </td>
-</table>
+@if (ViewBag.Send == 1)
+{
+    <table class="table-responsive">
+        <tr>
+            <td class="col-md-12 col-xs-12">
+                @Html.ActionLink("Create new printer chalan(Send)", "Create", new { id = 1 }, new { @class = "btn btn-success" })
+            </td>
+        </tr>
+    </table>
+}
+else
+{
+    <table class="table-responsive">
+        <tr>
+            <td class="col-md-12 col-xs-12">
+                @Html.ActionLink("Create new printer chalan(Receive)", "Create", new { id = 0 }, new { @class = "btn btn-success " })
+            </td>
+        </tr>
+    </table>
+}
 <table class="table table-striped table-advance table-hover mt">
     <tr>
         <th>
