--- a/StockManager/Views/Report/VendorWiseStock.cshtml
+++ b/StockManager/Views/Report/VendorWiseStock.cshtml
@@ -4,7 +4,18 @@
     ViewBag.Title = "Vendor Wise Stock";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>Vendor Wise Stock Report</h2>
+<table class="table">
+    <tr class="row">
+        <td class="col-md-10">
+            <h2>Vendor Wise Stock Report</h2>
+        </td>
+        <td class="align-md col-md-2">
+            <a href="~/Report/PrintVendor">
+                <i class="fa fa-print" aria-hidden="true"></i>
+            </a>
+        </td>
+    </tr>
+</table>
 <table class="table">
     <tr>
         <th>
@@ -40,7 +51,7 @@
                     </td>
                     <td>
                         @Convert.ToString((Convert.ToDecimal(item.GivenForPrinting) - Convert.ToDecimal(item.ReceivedAfterPrinting)))
-                        
+
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.TotalShrinkage)
