--- a/StockManager/Views/Report/ProductWiseStock.cshtml
+++ b/StockManager/Views/Report/ProductWiseStock.cshtml
@@ -9,9 +9,9 @@
         <td class="col-md-10">
             <h2>Product Wise Stock Report</h2>
         </td>
-        <td class="align-md col-md-2">
+        <td class="col-md-2" style="vertical-align:middle">
             <a href="~/Report/PrintProduct">
-                <i class="fa fa-print" aria-hidden="true"></i>
+                <i class="fa fa-print siz" style="font-size:30px;" aria-hidden="true"></i>
             </a>
         </td>
     </tr>
