--- a/StockManager/Views/Report/VendorWiseStock.cshtml
+++ b/StockManager/Views/Report/VendorWiseStock.cshtml
@@ -9,9 +9,9 @@
         <td class="col-md-10">
             <h2>Vendor Wise Stock Report</h2>
         </td>
-        <td class="align-md col-md-2">
+        <td class="col-md-2" style="vertical-align:middle">
             <a href="~/Report/PrintVendor">
-                <i class="fa fa-print" aria-hidden="true"></i>
+                <i class="fa fa-print" style="font-size:30px;" aria-hidden="true"></i>
             </a>
         </td>
     </tr>
