--- a/StockManager/Views/Shared/_Layout.cshtml
+++ b/StockManager/Views/Shared/_Layout.cshtml
@@ -46,14 +46,23 @@
                     <li class="sub-menu">
                         <a href="javascript:;">
                             <i class="fa fa-file-pdf-o"></i>
-                            <span>Job Work</span>
+                            <span>Printer Work</span>
                         </a>
                         <ul class="sub">
                             <li><a href="~/PrinterChalans/Index/1">Printer Work (Send)</a></li>     
-                            <li><a href="~/PrinterChalans/Index/0">Printer Work (Receive)</a></li>                        
-                            <li><a href="#">Tailor Work</a></li>
+                            <li><a href="~/PrinterChalans/Index/0">Printer Work (Receive)</a></li>   
                         </ul>
                     </li>       
+                    <li class="sub-menu">
+                        <a href="javascript:;">
+                            <i class="fa fa-file-pdf-o"></i>
+                            <span>Tailor Work</span>
+                        </a>
+                        <ul class="sub">
+                            <li><a href="~/TailorChalan/Index/1">Tailor Work (Given)</a></li>
+                            <li><a href="~/TailorChalan/Index/0">Tailor Work (Receive)</a></li>
+                        </ul>
+                    </li>    
                     <li class="mt">
                         <a href="~/Vendors/Index">
                             <i class="fa fa-female"></i>
