--- a/StockManager/Views/Products/Index.cshtml
+++ b/StockManager/Views/Products/Index.cshtml
@@ -8,38 +8,46 @@
 <h2>Product</h2>
 
 <p>
-    @Html.ActionLink("Add New Product", "Create")
+    @Html.ActionLink("Add New Product", "Create", null, new { @class = "btn btn-success" })
 </p>
-<table class="table">
+<table class="table table-striped table-advance table-hover mt">
     <tr>
         <th>
             Product Name
         </th>
         <th>
             Description
-        </th>        
+        </th>
         <th>
             Product Type
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.ActionLink(Convert.ToString(item.ProductName), "Details", new { id = item.Id })            
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>       
-        <td>
-            @Html.DisplayFor(modelItem => item.ProductType.ProductType1)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        if (item != null)
+        {
+            <tr>
+                <td>
+                    @if (item.ProductName != null && item.ProductName != "")
+                    {
+                        @Html.ActionLink(Convert.ToString(item.ProductName), "Details", new { id = item.Id })
+                    }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProductType.ProductType1)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-xs" })
+                    |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { onclick = "return confirm('Are you sure you wish to delete this Product?');", @class = "btn btn-danger btn-xs" })
+                </td>
+            </tr>
+        }
+    }
 
 </table>
