--- a/StockManager/Views/PurchaseOrders/Index.cshtml
+++ b/StockManager/Views/PurchaseOrders/Index.cshtml
@@ -32,7 +32,10 @@
     {
         <tr>
             <td>
-                @Html.ActionLink(Convert.ToString(item.InvoiceNumber), "Details", new { id = item.Id })               
+                @if (item.InvoiceNumber != null)
+                {
+                    @Html.ActionLink(Convert.ToString(item.InvoiceNumber), "Details", new { id = item.Id })
+                }
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Vendor.VendorName)
@@ -45,7 +48,7 @@
             </td>
             <td>
 
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-xs" })  
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-xs" })
                 |
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { onclick = "return confirm('Are you sure you wish to delete this Purchase Order?');", @class = "btn btn-danger btn-xs" })
             </td>
