--- a/StockManager/Views/TailorChalan/Index.cshtml
+++ b/StockManager/Views/TailorChalan/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Printer Chalan</h2>
+<h2>Tailor Chalan</h2>
 @if (ViewBag.Send == 1)
 {
     <table class="table-responsive">
